--- a/FillMe/FillMe.csproj
+++ b/FillMe/FillMe.csproj
@@ -40,10 +40,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DefaultGenerators\RandomWholeNumberGenerator.cs" />
     <Compile Include="Exceptions\CantAssignGeneratorProblem.cs" />
     <Compile Include="DefaultGeneratorFactory.cs" />
     <Compile Include="Filler.cs" />
-    <Compile Include="Foo.cs" />
     <Compile Include="IGenerateDummyData.cs" />
     <Compile Include="IMappingSet.cs" />
     <Compile Include="IProvideDefaultGenerators.cs" />
@@ -52,8 +52,9 @@
     <Compile Include="MappingItem.cs" />
     <Compile Include="MappingSet.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RandomStringGenerator.cs" />
+    <Compile Include="DefaultGenerators\RandomStringGenerator.cs" />
     <Compile Include="Extensions\TypeExtensions.cs" />
+    <Compile Include="Internal.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
