--- a/FillMe.Tests/FillMe.Tests.csproj
+++ b/FillMe.Tests/FillMe.Tests.csproj
@@ -49,7 +49,9 @@
     <Compile Include="DefaultGeneratorFactoryTests.cs" />
     <Compile Include="Extensions\TypeExtensionTests.cs" />
     <Compile Include="FillerTests.cs" />
-    <Compile Include="Foo.cs" />
+    <Compile Include="Generators\RandomDecimalGeneratorTests.cs" />
+    <Compile Include="Generators\RandomWholeGeneratorTests.cs" />
+    <Compile Include="TestData\Foo.cs" />
     <Compile Include="Functional\AllowedPartner.cs" />
     <Compile Include="Functional\FillingDataTests.cs" />
     <Compile Include="Functional\ComplexDependenciesTests.cs" />
@@ -60,7 +62,7 @@
     <Compile Include="MappingItemTests.cs" />
     <Compile Include="MappingSetTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RandomStringGeneratorTests.cs" />
+    <Compile Include="Generators\RandomStringGeneratorTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\FillMe\FillMe.csproj">
